--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,13 +239,93 @@ input[type=submit] {
 }
 
 @media only screen and (max-width: 980px) {
-  .main-section: width 100%;
+  .main-section {
+    width: 100%;
+  }
 }
 
 @media only screen and (max-width: 768px) {
+/*   nav {
+    width: 100%;
+  } */
+
+  nav a {
+    float: right;
+    padding: 20px;
+  }
+
+  #masthead {
+    width: 100%;
+    min-width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+/*   #logo {
+    width: 100%;
+    min-width: 100%;
+  } */
+  .container {
+    width: 100%;
+    clear: both;
+  }
+  .main-section {
+    margin: 5%;
+    width: 90%;
+    min-width: 90%;
+  }
+
+  .sidebar {
+    width: 90%;
+    min-width: 90%;
+    margin: 0 5% 10% 5%;
+  }
+  .work {
+    width: 100%;
+
+  }
 
 }
 
 @media only screen and (max-width: 640px) {
+  nav {
+    width: 100%;
+    margin-bottom: 5%;
+  }
+
+  nav a {
+    width: 32%;
+    margin: 0;
+    padding: 10px;
+    text-align: center;
+  }
+
+  #masthead {
+    width: 100%;
+    min-width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  #logo {
+    width: 100%;
+    min-width: 100%;
+  }
+  .container {
+    width: 100%;
+    clear: both;
+  }
+  .main-section {
+    margin: 10% 5%;
+    width: 90%;
+  }
+
+  .sidebar {
+    width: 90%;
+    min-width: 90%;
+    margin: 0 5% 10% 5%;
+  }
+  .work {
+    width: 100%;
+
+  }
 
 }
